Switched from using a single dropdown to using two. Upon selecting a workspace, the layers dropdown populates dynamically.

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,9 +46,14 @@
 <body>
   <h1>GeoServer WMS Layers</h1>
 
+   <!-- Dropdown for layer selection -->
+  <select id="workspace-dropdown">
+    <option value="">-- Select a workspace--</option>
+  </select>
+
   <!-- Dropdown for layer selection -->
-  <select id="dropdown">
-    <option value="">-- Select an option --</option>
+  <select id="layer-dropdown">
+    <option value="">-- Select a layer --</option>
   </select>
 
   <!-- Generate Map Button -->
