--- a/templates/home.html
+++ b/templates/home.html
@@ -13,31 +13,55 @@
   <style>
      #container {
       display: flex;
-      justify-content: center;
+      flex-direction:column;
       align-items: flex-start;
       gap: 20px; /* Space between map and legend */
-      margin: 20px auto; /* Center container horizontally */
+      margin: 20px; /* Center container horizontally */
     }
+    @media (min-width: 768px) {
+      #container {
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+      }
+    }
+
     #map {
-      height: 500px; /* Adjust height as needed */
-      width: 800px; /* Adjust width as needed */
+      width: 100%;
+      max-width: 800px;
+      height: 400px;
       border: 2px solid #ccc;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      margin: 20px auto; /* Center the map horizontally */
     }
+    @media (min-width: 768px) {
+      #map {
+        height: 500px;
+      }
+    }
+
+
     #slider-container {
-      width: 800px;
+      width: 100%;
+      max-width: 800px;
       margin: 10px auto;
     }
 
     #legend-container {
-      max-width: 200px;
+      max-width: 100%;
       text-align: center;
+      padding:10px;
+    }
+
+    @media (min-width: 768px) {
+      #legend-container {
+        max-width: 200px;
+      }
     }
 
     #legend-img {
       max-width: 100%;
       height: auto;
+      min-width: 150px;
       border: 1px solid #ccc;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
