Finished testing and adding functionality for dynamic layer-dropdown updates. Simplified code.

--- a/templates/home.html
+++ b/templates/home.html
@@ -114,9 +114,9 @@
       <h1></h1>
       <h5> Select a Geoserver Service</h1>
       <select id="request-service-dropdown">
-        <option value="option1">wms</option>
-        <option value="option2">wcs</option>
-        <option value="option3">wfs</option>
+        <option value="option1">WMS</option>
+        <option value="option2">WCS</option>
+        <option value="option3">WFS</option>
       </select>
       <h5> Select a Workspace</h1>
       <select id="request-workspace-dropdown">
